Fix chart-builder height clipping with min-height: 100%

--- a/resources/css/plotly-chart-editor.css
+++ b/resources/css/plotly-chart-editor.css
@@ -38,8 +38,7 @@
     display: grid;
     grid-template-columns: var(--plotly-editor-sidebar-w) 1fr;
     grid-template-rows: 1fr auto;
-    height: 100%;
-    min-height: 0;
+    min-height: 100%;
     font-family: var(--plotly-editor-font);
     font-size: 0.875rem;
     color: var(--plotly-editor-text);
